@@ -1,12 +1,15 @@
 1998-07-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
+	* Makefile.am (SRC): Add memcpy.c and memchr.c.
+	(noinst_HEADERS): Add mem.h.
+
 	* strndup.c: Don't include stdio.h or sys/types.h.
 
 	* misc.h: Add declaration of memcpy.
 
 	* memset.c: Include mem.h instead of having local defines.
 
-	* memcpy.c: New file.
+	* memcpy.c, memchr.c: New files.
 
 	* mem.h: New file (defines common to memset.c and memcpy.c).
 
